--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "A simple application to solve 2D maze",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./webpack.config.js --progress --colors",
-    "start": "webpack-dev-server --progress --colors"
+    "start": "node ./app.js"
   },
   "author": "Sivapalaniappan Singaravelu",
   "license": "ISC",
@@ -16,10 +15,11 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "express": "^4.16.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
     "webpack-cli": "^1.4.5",
+    "webpack-dev-middleware": "^1.12.1"
   }
 }
